# NotasSeguras

./: CMakeLists.txt  Messages.sh  NotasSeguras.kdev4  README  README.md  config.ui  notasseguras.cpp  notasseguras.h  plasma-applet-notasseguras.desktop  simplecrypt.cpp  simplecrypt.h
iconos/: CMakeLists.txt  fondo.svgz  notasseguras.svgz
